board: Dynamically create columns for bug statuses. Extra information displayed.
Signed-off-by: Ben Lancaster <bdl@live.co.uk>

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -18,3 +18,12 @@
 .bz-item-id {
     float:right;
 }
+
+.bz-column {
+    border-left:solid 1px #CCC;
+    border-right:solid 1px #CCC;
+}
+
+.bz-item-desc {
+    font-weight: bold;
+}
