--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -1,34 +1,14 @@
 <div class="row" class="bz-board">
-    <div class="col-md-3">
-        <h4>New</h4>
-        <div class="list-group" ng-repeat="item in bug_list | filter: { sect: 'NEW' }">
+    <div class="col-sm-{{ 12/board_sections.length }} bz-column" ng-repeat="board in board_sections">
+        <h4>{{ board }}</h4>
+        <div class="list-group" ng-repeat="item in bug_list | filter: { status: board }">
             <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item">
-                <p class="list-group-item-text">{{ item.title }}</p>
+                <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
+                <span class="label label-primary">{{ item.product }}</span>
+                <span class="label label-info">{{ item.component }}</span>
                 <span class="label label-default">{{ item.assignee }}</span>
-                <span class="label label-primary">{{ item.component }}</span>
-                <span class="bz-item-id">{{ item.id }}</span>
-            </a>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <h4>Assigned</h4>
-        <div class="list-group" ng-repeat="item in bug_list | filter: { sect: 'ASSI' }">
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item">
-                <p class="list-group-item-text">{{ item.title }}</p>
-                <span class="label label-default">{{ item.assignee }}</span>
-                <span class="label label-primary">{{ item.component }}</span>
-                <span class="bz-item-id">{{ item.id }}</span>
-            </a>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <h4>Resolved</h4>
-        <div class="list-group" ng-repeat="item in bug_list | filter: { sect: 'RESO' }">
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item">
-                <p class="list-group-item-text">{{ item.title }}</p>
-                <span class="label label-default">{{ item.assignee }}</span>
-                <span class="label label-primary">{{ item.component }}</span>
-                <span class="bz-item-id">{{ item.id }}</span>
+                <small>{{ item.changed }}</small>
+                <span class="bz-item-id">#{{ item.id }}</span>
             </a>
         </div>
     </div>
