--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -1,9 +1,10 @@
 <div class="row" class="bz-board">
     <div class="col-sm-{{ 12/board_sections.length }} bz-column" ng-repeat="board in board_sections">
         <h4>{{ board }}</h4>
-        <div class="list-group" ng-repeat="item in bug_list | filter: { status: board }">
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item">
+        <div class="list-group">
+            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { status: board }">
                 <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
+                <span class="label label-default">{{ item.status }}</span>
                 <span class="label label-primary">{{ item.product }}</span>
                 <span class="label label-info">{{ item.component }}</span>
                 <span class="label label-default">{{ item.assignee }}</span>
