--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -1,7 +1,7 @@
 <div class="row" class="bz-board">
     <div class="col-sm-{{ (12/board_sections.length) | number:0 }} bz-column" ng-repeat="board in board_sections">
-        <h4>{{ board }}</h4>
-        <div class="list-group">
+        <button ng-click="showDiv = !showDiv" class = "btn btn-primary">{{ board }}</button>
+        <div class="list-group" ng-hide="showDiv">
             <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { status: board }">
                 <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
                 <span class="label label-default">{{ item.status }}</span>
