--- a/app/style/main.css
+++ b/app/style/main.css
@@ -28,91 +28,7 @@
     font-weight: bold;
 }
 
-/* For the switch button */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 220px;
-  height: 34px;
+.scroll {
+  height:75vh;
+  overflow:auto;
 }
-
- .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 36px;
-  width: 60px;
-  left:0px;
-  bottom: -1px;
-  top: -1px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(160px);
-  -ms-transform: translateX(160px);
-  transform: translateX(160px);
-}
-
-.text {
-  color: white;
-}
-
-.text:after {
-  position: absolute;
-  top: 7px;
-  right: 25px;
-  content: "Column Scroll OFF";
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-}
-.text:before {
-  position: absolute;
-  top: 7px;
-  left: 25px;
-  content: "Column Scroll ON";
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-}
-
-input + .slider + .text:after {
-  opacity: 1;
-}
-input + .slider + .text:before {
-  opacity: 0;
-}
-
-
-input:checked + .slider + .text:after {
-  opacity: 0;
-}
-
-input:checked + .slider + .text:before {
-  opacity: 1;
-}
-
