board: Improves board sorting (removes duplicate code)
Signed-off-by: Ben Lancaster <bdl@live.co.uk>

--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -1,23 +1,13 @@
 <div class="row" class="bz-board">
     <div style="text-align: center;">
-        <button ng-click="ShowByAssignee = !ShowByAssignee" ng-show="!ShowByAssignee">Sorting by bug status</button>
-        <button ng-click="ShowByAssignee = !ShowByAssignee" ng-show="ShowByAssignee">Sorting by bug assignee</button>
+        <button ng-click="toggleSort()">Sorting by bug status</button>
         <button ng-click="toggleScroll()">Toggle scroll</button>
     </div>
     <br>
-    <div class="col-sm-{{ (12/board_sections.length) | number:0 }} bz-column" ng-repeat="board in board_sections" ng-show="!ShowByAssignee">
+    <div class="col-sm-{{ (12/active_board_sections.length) | number:0 }} bz-column" ng-repeat="board in active_board_sections">
         <button ng-click="showDiv = !showDiv">{{ board }}</button>
         <div class="list-group bzb-list scroll" ng-hide="showDiv" style="overflow:auto;">
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { status: board }">
-                <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
-                <span class="label label-default">{{ item.status }}</span>
-                <span class="label label-primary" style="background-color:{{ item.product_color }}">{{ item.product }}</span>
-                <span class="label label-info">{{ item.component }}</span>
-                <span class="label label-default">{{ item.assignee }}</span>
-                <small>{{ item.changed }}</small>
-                <span class="bz-item-id">#{{ item.id }}</span>
-            </a>
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { status: board }">
+            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: active_filter(board)">
                 <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
                 <span class="label label-default">{{ item.status }}</span>
                 <span class="label label-primary" style="background-color:{{ item.product_color }}">{{ item.product }}</span>
@@ -28,20 +18,11 @@
             </a>
         </div>
     </div>
-    <!-- Assignee https://github.com/bendl/bugzilla-board/issues/7 -->
-    <div class="col-sm-{{ (12/board_sections_assignee.length) | number:0 }} bz-column" ng-repeat="board in board_sections_assignee" ng-show="ShowByAssignee">
-        <button ng-click="showDiv = !showDiv">{{ board }}</button>
+    <!-- Assignee https://github.com/bendl/bugzilla-board/issues/7
+    <div class="col-sm-{{ (12/board_sections_assignee.length) | number:0 }} bz-column" ng-repeat="user in board_sections_assignee" ng-show="ShowByAssignee">
+        <button ng-click="showDiv = !showDiv">{{ user }}</button>
         <div class="list-group bzb-list scroll" ng-hide="showDiv" style="overflow:auto;">
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { assignee: board }">
-                <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
-                <span class="label label-default">{{ item.status }}</span>
-                <span class="label label-primary" style="background-color:{{ item.product_color }}">{{ item.product }}</span>
-                <span class="label label-info">{{ item.component }}</span>
-                <span class="label label-default">{{ item.assignee }}</span>
-                <small>{{ item.changed }}</small>
-                <span class="bz-item-id">#{{ item.id }}</span>
-            </a>
-            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { assignee: board }">
+            <a href="show_bug.cgi?id={{ item.id }}" class="list-group-item" ng-repeat="item in bug_list | filter: { assignee: user }">
                 <p class="list-group-item-text bz-item-desc">{{ item.desc }}</p>
                 <span class="label label-default">{{ item.status }}</span>
                 <span class="label label-primary" style="background-color:{{ item.product_color }}">{{ item.product }}</span>
@@ -52,5 +33,6 @@
             </a>
         </div>
     </div>
+    -->
 </div>
 
