board: Prepare for webstore release
Signed-off-by: Ben Lancaster <bdl@live.co.uk>

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -25,7 +25,9 @@
 }
 
 .bz-item-desc {
-    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .scroll {
